<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pdaa.learning.mycalendar.CalendarViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:layout_marginTop="24dp"
                android:text="@string/add_new_date_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kindOfEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tipo_de_evento_title" />

            <Spinner
                android:id="@+id/kindOfEvent"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="100dp"></Spinner>

            <TextView
                android:id="@+id/eventTitleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/nombre_del_evento" />

            <EditText
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                />

            <TextView
                android:id="@+id/startDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/fecha_de_inicio" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/in_date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    app:day="@{viewModel.SDay}"
                    app:month="@{viewModel.SMonth}"
                    app:year="@{viewModel.SYear}"
                    tools:text="dateHere" />

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/in_date"
                    android:layout_toEndOf="@+id/in_date"
                    android:text="@string/ingresar_fecha" />

                <TextView
                    android:id="@+id/in_time"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/in_date"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    app:hour="@{viewModel.SHour}"
                    app:minute="@{viewModel.SMinute}"
                    tools:text="hour here" />

                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_date"
                    android:layout_alignStart="@+id/btn_date"
                    android:text="@string/ingresar_hora" />

            </RelativeLayout>


            <TextView
                android:id="@+id/endDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/fecha_de_finalizaci_n" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/in_end_date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    app:day="@{viewModel.EDay}"
                    app:month="@{viewModel.EMonth}"
                    app:year="@{viewModel.EYear}"
                    tools:text="dateHere" />

                <Button
                    android:id="@+id/btn_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/in_end_date"
                    android:layout_toEndOf="@+id/in_end_date"
                    android:text="@string/ingresar_fecha" />

                <TextView
                    android:id="@+id/in_end_time"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/in_end_date"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    app:hour="@{viewModel.EHour}"
                    app:minute="@{viewModel.EMinute}"
                    tools:text="hour here" />

                <Button
                    android:id="@+id/btn_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_end_date"
                    android:layout_alignStart="@+id/btn_end_date"
                    android:text="@string/ingresar_hora" />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/allDayTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/el_evento_durar_todo_el_d_a"
                    app:layout_constraintBottom_toBottomOf="@+id/allDay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.37"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent
" />

                <CheckBox
                    android:id="@+id/allDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    app:layout_constraintStart_toEndOf="@+id/allDayTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/descripci_n" />
            <EditText
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_margin="15dp"
                        android:text="Cancelar"
                        />

                    <Button
                        android:id="@+id/continue_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Continuar"
                        android:layout_margin="15dp"
                        />
                </LinearLayout>



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</layout>